2013-10-01  Nick Clifton  <nickc@redhat.com>

	* lib/target-supports.exp (check_effective_target_ptr32plus): Fail
	for MSP430.
	* gcc.c-torture/compile/20010327-1.c: Only run the test for
	ptr32plus targets.
	* gcc.c-torture/compile/pr41181.c: Likewise.
	* gcc.c-torture/compile/calls.c: Likewise.
	* gcc.c-torture/compile/990617-1.c: Likewise.
	* gcc.c-torture/compile/pr55955.c: Only run the test for
	int32plus targets.
	* gcc.c-torture/compile/limits-externdecl.c: Likewise.

2013-10-01  Richard Biener  <rguenther@suse.de>

	PR tree-optimization/58553
	* gcc.dg/torture/pr58553.c: New testcase.

2013-09-30  Jakub Jelinek  <jakub@redhat.com>

	PR middle-end/58564
	* gcc.c-torture/execute/pr58564.c: New test.

2013-09-30  Teresa Johnson  <tejohnson@google.com>

	* testsuite/gcc.dg/tree-ssa/ssa-dom-thread-3.c (expand_one_var):
	Update for additional dump message.

2013-09-30  Richard Biener  <rguenther@suse.de>

	PR tree-optimization/58554
	* gcc.dg/torture/pr58554.c: New testcase.

2013-09-30  Simon Cook  <simon.cook@embecosm.com>
	    Joern Rennecke  <joern.rennecke@embecosm.com>

	* gcc.target/arc/barrel-shifter-1.c: New test.
	* gcc.target/arc/barrel-shifter-2.c: Likewise.
	* gcc.target/arc/long-calls.c, gcc.target/arc/mA6.c: Likewise.
	* gcc.target/arc/mA7.c, gcc.target/arc/mARC600.c: Likewise.
	* gcc.target/arc/mARC601.c, gcc.target/arc/mARC700.c: Likewise.
	* gcc.target/arc/mcpu-arc600.c, gcc.target/arc/mcpu-arc601.c: Likewise.
	* gcc.target/arc/mcpu-arc700.c, gcc.target/arc/mcrc.c: Likewise.
	* gcc.target/arc/mdpfp.c, gcc.target/arc/mdsp-packa.c: Likewise.
	* gcc.target/arc/mdvbf.c, gcc.target/arc/mlock.c: Likewise.
	* gcc.target/arc/mmac-24.c, gcc.target/arc/mmac-d16.c: Likewise.
	* gcc.target/arc/mno-crc.c, gcc.target/arc/mno-dsp-packa.c: Likewise.
	* gcc.target/arc/mno-dvbf.c, gcc.target/arc/mno-lock.c: Likewise.
	* gcc.target/arc/mno-mac-24.c, gcc.target/arc/mno-mac-d16.c: Likewise.
	* gcc.target/arc/mno-rtsc.c, gcc.target/arc/mno-swape.c: Likewise.